--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href="./css/styles.css" rel="stylesheet" />
     </head>
     <body>
-        <form class="formularioNumero">
+        <form class="formularioNumero" onsubmit="generaNumeroAleatorio(event)">
             <label for="generaNumero">
                 Presiona el botón para generar un número aleatorio:
             </label>
@@ -26,7 +26,6 @@
             </button>
         </form>
         <div class="resultado">
-
         </div>
         <script src="./js/index.js"></script>
     </body>
